# cardano-wallet

lib/core/: cardano-wallet-coin-selection.cabal  cardano-wallet-core.cabal
lib/core-integration/src/Test/Integration/Scenario/API/Shelley/: TransactionsNew.hs
lib/core/src/Cardano/: Wallet.hs
lib/core/src/Cardano/Wallet/: Api.hs  Network.hs  Sign.hs  Unsafe.hs
lib/core/src/Cardano/Wallet/Api/: Server.hs  Types.hs
lib/core/src/Cardano/Wallet/DB/: Sqlite.hs
lib/core/src/Cardano/Wallet/DB/Sqlite/: TH.hs
lib/core/src/Cardano/Wallet/Primitive/: Slotting.hs  Types.hs
lib/core/src/Cardano/Wallet/Primitive/AddressDiscovery/: SingleAddress.hs
lib/core/src/Cardano/Wallet/Primitive/Types/: Coin.hs  UTxO.hs
lib/core/src/Cardano/Wallet/Primitive/Types/Coin/: Gen.hs
lib/core/src/Ouroboros/Network/Client/: Wallet.hs
lib/core/test/unit/Cardano/Wallet/: NetworkSpec.hs  SignSpec.hs
lib/core/test/unit/Cardano/Wallet/Primitive/: CoinSelectionSpec.hs
lib/core/test/unit/Cardano/Wallet/Primitive/CoinSelection/: BalanceSpec.hs
lib/dbvar/: README.md
lib/dbvar/src/Data/: Chain.hs  DBVar.hs  Delta.hs  Table.hs
lib/dbvar/src/Database/: Schema.hs
lib/dbvar/src/Database/Persist/: Delta.hs
lib/dbvar/src/Demo/: Database.hs
lib/shelley/: cardano-wallet.cabal
lib/shelley/bench/: Restore.hs
lib/shelley/src/Cardano/Wallet/: Shelley.hs
lib/shelley/src/Cardano/Wallet/Shelley/: Compatibility.hs  Network.hs  Pools.hs
lib/shelley/src/Cardano/Wallet/Shelley/Api/: Server.hs
lib/shelley/test/unit/Cardano/Wallet/Shelley/: CompatibilitySpec.hs  TransactionSpec.hs
lib/test-utils/: cardano-wallet-test-utils.cabal
lib/test-utils/src/Test/QuickCheck/: Extra.hs
nix/.stack.nix/: cardano-wallet-core.nix  dbvar.nix
nix/nixos/: cardano-wallet-service.nix
