name:                cardano-wallet
version:             2022.1.18
synopsis:            Wallet backend protocol-specific bits implemented using Shelley nodes
description:         Please see README.md
homepage:            https://github.com/input-output-hk/cardano-wallet
author:              IOHK Engineering Team
maintainer:          operations@iohk.io
copyright:           2020 IOHK
license:             Apache-2.0
category:            Web
build-type:          Simple
cabal-version:       >=1.10

flag release
    description: Enable optimization and `-Werror`
    default: False
    manual: True

library
  default-language:
      Haskell2010
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
  ghc-options:
      -Wall
      -Wcompat
      -fwarn-redundant-constraints
  if (flag(release))
    ghc-options: -O2 -Werror
  build-depends:
      base
    , aeson
    , array
    , base58-bytestring
    , bech32
    , bech32-th
    , binary
    , bytestring
    , cardano-addresses
    , cardano-api
    , cardano-binary
    , cardano-crypto
    , cardano-crypto-class
    , cardano-crypto-wrapper
    -- , cardano-wallet-launcher
    , cardano-ledger-byron
    , cardano-ledger-core
    , cardano-ledger-shelley
    , cardano-ledger-shelley-ma
    , cardano-ledger-alonzo
    , cardano-slotting
    -- , cardano-wallet-cli
    , cardano-wallet-coin-selection
    -- , cardano-wallet-launcher
    -- , cardano-wallet-test-utils
    , cborg
    , containers
    , contra-tracer
    , directory
    , extra
    , filepath
    , fmt
    , generic-lens
    , int-cast
    , io-classes
    -- , iohk-monitoring
    , memory
    , network
    , network-mux
    , network-uri
    , optparse-applicative
    , ouroboros-consensus
    , ouroboros-consensus-byron
    , ouroboros-consensus-cardano
    , ouroboros-consensus-shelley
    , ouroboros-network
    , ouroboros-network-framework
    , random
    , retry
    , serialise
    -- , servant-server
    , strict-containers
    , strict-non-empty-containers
    , temporary
    , text
    , text-class
    , time
    , transformers
    , typed-process
    , unliftio
    , unliftio-core
    , unordered-containers
    , vector
    -- , warp
    -- , yaml
    , Win32-network
  hs-source-dirs:
      src
  exposed-modules:
      Cardano.Wallet.Byron.Compatibility
      -- Cardano.Wallet.Shelley
      -- Cardano.Wallet.Shelley.Api.Server
      Cardano.Wallet.Shelley.Compatibility
      Cardano.Wallet.Shelley.Compatibility.Ledger
      -- Cardano.Wallet.Shelley.Network
      -- Cardano.Wallet.Shelley.Transaction
      -- Cardano.Wallet.Shelley.Launch
      -- Cardano.Wallet.Shelley.Launch.Cluster
      -- Cardano.Wallet.Shelley.Pools
